# pytelemety

./: .env.dev  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: lint.yml  tests.yml
pytelemetry/: __init__.py  context.py  filters.py  formaters.py  handlers.py  logger.py
pytelemetry/filters/: __init__.py  _args_filter.py  _sensitive_data_filter.py
pytelemetry/utils/: encoders.py  obj_to_dict.py
tests/: conftest.py  pytelemetry_formater_test.py  pytelemetry_handler_test.py  pytelemetry_test.py
tests/utils/: encoders_test.py
